gccida/c3/rm_other_notes
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rm_other_notes/src/haifa-sched.c:1820:4: error: expected ';' after expression
rtx v3; // r9 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rm_other_notes/src/haifa-sched.c:1820:5: error: use of undeclared identifier 'v3'
rtx v3; // r9 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rm_other_notes/src/haifa-sched.c:1822:4: error: expected ';' after expression
rtx v5; // r11 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rm_other_notes/src/haifa-sched.c:1822:5: error: use of undeclared identifier 'v5'
rtx v5; // r11 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rm_other_notes/src/haifa-sched.c:1823:4: error: expected ';' after expression
rtx v6; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rm_other_notes/src/haifa-sched.c:1823:5: error: use of undeclared identifier 'v6'
rtx v6; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rm_other_notes/src/haifa-sched.c:1825:4: error: expected ';' after expression
rtx v8; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rm_other_notes/src/haifa-sched.c:1825:5: error: use of undeclared identifier 'v8'
rtx v8; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rm_other_notes/src/haifa-sched.c:1827:4: error: expected ';' after expression
rtx v10; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rm_other_notes/src/haifa-sched.c:1827:5: error: use of undeclared identifier 'v10'
rtx v10; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rm_other_notes/src/haifa-sched.c:1836:1: error: use of undeclared identifier 'v3'
v3 = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rm_other_notes/src/haifa-sched.c:1838:1: error: use of undeclared identifier 'v5'
v5 = head; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rm_other_notes/src/haifa-sched.c:1841:17: error: use of undeclared identifier 'v5'
if ( *( _WORD *)v5 != 37 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rm_other_notes/src/haifa-sched.c:1843:1: error: use of undeclared identifier 'v6'
v6 = v5; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rm_other_notes/src/haifa-sched.c:1843:6: error: use of undeclared identifier 'v5'
v6 = v5; 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rm_other_notes/src/haifa-sched.c:1846:16: error: use of undeclared identifier 'v5'
v7 = ( __int64)v5[1]; 
               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rm_other_notes/src/haifa-sched.c:1849:1: error: use of undeclared identifier 'v8'
v8 = v5; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rm_other_notes/src/haifa-sched.c:1849:6: error: use of undeclared identifier 'v5'
v8 = v5; 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rm_other_notes/src/haifa-sched.c:1852:1: error: use of undeclared identifier 'v6'
v6 = v8[1].fld[0].rtx; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rm_other_notes/src/obj/haifa-sched.o] Error 1
